--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/geolocation": "^4.7.0",
+    "@ionic-native/network": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "@types/google-maps": "^3.2.0",
     "angularfire2": "^5.0.0-rc.6",
     "cordova-plugin-camera": "^4.0.2",
     "firebase": "^4.12.1",
