--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/facebook": "^4.7.0",
     "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/network": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
@@ -34,6 +35,7 @@
     "cordova-android": "7.0.0",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-facebook4": "^2.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -58,7 +60,12 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "242294123176554",
+        "APP_NAME": "Hugerstreet",
+        "ANDROID_SDK_VERSION": "4.+"
+      }
     },
     "platforms": [
       "android"
